exec/11/other-app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    environment: testing
  name: products-service
  namespace: other
spec:
  containers:
  - image: nginx:1.18.0
    name: products-service
