exec/11/other2-app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    environment: my-own
  name: notwork-service
  namespace: other
spec:
  containers:
  - image: nginx:1.18.0
    name: products-service
