exec/11/products-app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    environment: staging
  name: products-service
  namespace: dev-team
spec:
  containers:
  - image: nginx:1.18.0
    name: products-service
